java/java-tests/testData/codeInsight/daemonCodeAnalyzer/genericsHighlighting8/IDEA67597.java
class A<T>
{
    T x = <error descr="Inconvertible types; cannot cast 'int' to 'T'">(T) 1</error>;
}
